syntax = "proto3";

package proto;

option go_package = "github.com/nikhil1010918/grpc-report-service/proto";

service ReportService {
  rpc GenerateReport(GenerateReportRequest) returns (GenerateReportResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message GenerateReportRequest {
  string user_id = 1;
}

message GenerateReportResponse {
  string report_id = 1;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}
